Fixed main page broken in mobile

--- a/static/assets/style/style.css
+++ b/static/assets/style/style.css
@@ -1,10 +1,5 @@
-@font-face {
-	font-family: 'Cyntho Pro Regular';
-	src: url('../font/CynthoPro-Regular.woff');
-}
 
 body {
-	font-family: 'Cyntho Pro Regular';
 	color: #fffcf7;
 	cursor: default;
 	-moz-user-select: none;
@@ -113,14 +108,6 @@ body {
 	background: -moz-linear-gradient(right, black, white, black);
 }
 
-#wrapper {
-	width: 849px;
-	margin: 0 auto;
-	min-height: 600px;
-	/* background: url("/assets/image/banner.webp") top center no-repeat; */
-	vertical-align: baseline;
-}
-
 #message {
 	width: 50em;
 	margin: 1em auto 5em;
@@ -136,7 +123,7 @@ body {
 }
 
 body {
-	margin: 0;
+	margin: 0px;
 }
 
 .home-page {
